[gd_scene load_steps=7 format=2]

[ext_resource path="res://program blocks/Blocks/Tile Blocks/Translate Block.gd" type="Script" id=1]
[ext_resource path="res://program blocks/Socket.tscn" type="PackedScene" id=2]
[ext_resource path="res://program blocks/Blocks/Tile Blocks/Translate Block.svg" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.392157, 0.254902, 0.611765, 0.65098 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.176471, 0.101961, 0.282353, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[node name="TranslateBlock" type="Panel"]
margin_left = 1.0
margin_right = 609.0
margin_bottom = 106.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
icon = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.4
margin_top = 13.0
text = "Translate"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parameters" type="HBoxContainer" parent="."]
anchor_top = 0.457
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.68646
margin_top = 0.0149994
margin_right = -6.31354
margin_bottom = -15.0
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SpinBoxX" type="SpinBox" parent="Parameters"]
margin_left = 9.0
margin_right = 195.0
margin_bottom = 42.0
mouse_filter = 2
mouse_default_cursor_shape = 1
min_value = -12.0
max_value = 12.0
align = 1
suffix = "units right"

[node name="SpinBoxY" type="SpinBox" parent="Parameters"]
margin_left = 203.0
margin_right = 389.0
margin_bottom = 42.0
mouse_filter = 2
mouse_default_cursor_shape = 1
min_value = -12.0
max_value = 12.0
align = 1
suffix = "units up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBoxT" type="SpinBox" parent="Parameters"]
margin_left = 397.0
margin_right = 583.0
margin_bottom = 42.0
mouse_filter = 2
mouse_default_cursor_shape = 1
min_value = 1.0
max_value = 10.0
step = 0.5
value = 1.0
allow_greater = true
align = 1
prefix = "for"
suffix = "seconds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inflow" parent="." instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_rotation = 180.0
custom_styles/panel = SubResource( 2 )

[node name="Outflow" parent="." instance=ExtResource( 2 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 3 )
type = 1
[connection signal="value_changed" from="Parameters/SpinBoxX" to="." method="_on_values_changed" binds= [ 0 ]]
[connection signal="value_changed" from="Parameters/SpinBoxY" to="." method="_on_values_changed" binds= [ 1 ]]
[connection signal="value_changed" from="Parameters/SpinBoxT" to="." method="_on_values_changed" binds= [ 2 ]]
